<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scan"
        android:title="@string/scanbtn"
        android:orderInCategory="10"
        android:showAsAction="never"></item>

    <item
        android:id="@+id/myMarcacion"
        android:title="@string/myMarcacion"
        android:orderInCategory="20"
        android:showAsAction="never"></item>


    <item
        android:id="@+id/empMarcacion"
        android:title="@string/personal"
        android:orderInCategory="25"
        android:showAsAction="never"></item>

    <item
        android:id="@+id/cambioDisp"
        android:title="@string/cambiarDisp"
        android:orderInCategory="30"
        android:showAsAction="never"></item>

    <item
        android:id="@+id/autoCambioDisp"
        android:title="@string/autoCambioDisp"
        android:orderInCategory="40"
        android:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
