<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:text="@string/id_Usuario"
            android:textAppearance="@style/Text"/>

        <EditText
            android:id="@+id/identifica"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:maxLength="10"
            android:numeric="integer"
            android:theme="@style/AppTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:text="@string/nom_Usuario"
            android:textAppearance="@style/Text"/>

        <EditText
            android:id="@+id/nombres"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLength="200"
            android:theme="@style/AppTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:text="@string/apell_Usuario"
            android:textAppearance="@style/Text"/>

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLength="200"
            android:theme="@style/AppTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:text="@string/area_Usuario"
            android:textAppearance="@style/Text"/>

        <Spinner
            android:id="@+id/area"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">
        </Spinner>
    </LinearLayout>

    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical|center_horizontal"
         android:paddingTop="40sp">

             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/register"
                 android:background="@drawable/button"
                 android:backgroundTint="@color/button_register"
                 android:textAppearance="@style/TextButton"
                 android:onClick="registrar"/>

     </LinearLayout>

</LinearLayout>